syntax = "proto3";

package newsPackage;

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc GetReverse (StringMessage) returns (StringMessage) {}
    rpc UploadImage (ImageUploadRequest) returns (ImageUploadResponse);
}

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}
message Empty {}

message NewsList {
   repeated News news = 1;
}
//gprc test
message StringMessage {
    string value = 1;
}

// 이미지 전송 요청에 대한 메시지 포맷 정의
message ImageUploadRequest {
  bytes image = 1;       // Receive image data buffer
  string label = 2;      // image label
  string hashed = 3;       // Hash value send from api client
}

// 서버 응답 형태
message ImageUploadResponse {
  string status = 1;     // 처리 결과 상태 메시지
}
